--- a/views/user.ejs
+++ b/views/user.ejs
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <header id="landing-header" class="py-2.5 px-10 flex items-center fixed top-0 w-full justify-between z-40 ">
-        <div id="logo-div" class="flex flex-grow basis-0">
-            <img src="../public/img/logo.png" alt="logo">
-        </div>
+<body class="bg-[url('/img/landing.png')] bg-cover">
+    <header id="landing-header" class="fixed flex justify-center w-full items-center text-white mt-5 ">
         <nav>
-            <ul
-                class="flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-300 [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
+            <ul class="flex text-sm [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
                 <li><a href="/home">Home</a></li>
-                <li><a href="#">Log in</a></li>
+                <li><a href="/login">Log in</a></li>
                 <li><a href="/register">Sign up</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Games</a></li>
             </ul>
         </nav>
-
     </header>
+
+    <section id="register" class="w-full h-screen flex justify-center items-center">
+        <h1>USER PAGE</h1>
+    </section>
+    <script type="module" src="/app.js"></script>
 </body>
 
 </html>
